publish schedule done with emails

--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -718,7 +718,7 @@
                   <span>Unassigned</span>
                 </div>
               </div>
-              <button class="publish-btn" onclick="openPublishConfirmation()">
+              <button class="publish-btn" id="publish-schedule-btn" onclick="openPublishConfirmation()">
                 <span class="material-icons">publish</span>
                 Publish Schedule
               </button>
