--- a/templates/login.html
+++ b/templates/login.html
@@ -53,21 +53,9 @@
       </div>
       <div class="remember-forgot">
         <label><input type="checkbox"> Remember me</label>
-        <a href="#">Forgot password?</a>
+        <a href="{{ url_for('forgot_password') }}">Forgot password?</a>
       </div>
       <button type="submit" class="btn" id="login-btn">Login as Facilitator</button>
-      <div class="oauth-section">
-        <div class="divider"><span>Or sign in with</span></div>
-        <div class="oauth-buttons">
-          <a href="{{ url_for('google_login') }}" class="oauth-btn google-btn">
-            <i class='bx bxl-google'></i>
-            Sign in with Google
-          </a>
-        </div>
-      </div>
-      <div class="register-link">
-        <p>Don't have an account? <a href="{{ url_for('signup') }}">Register</a></p>
-      </div>
     </form>
   </div>
   <script>
