--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -578,6 +578,17 @@
     
     <!-- Swap Requests Sections -->
     <div class="swap-requests-container">
+      <!-- Incoming Requests -->
+      <div class="requests-section incoming-requests">
+        <div class="section-header">
+          <span class="material-icons section-icon incoming">inbox</span>
+          <h3>Incoming Requests <span id="incoming-count" class="count-badge">0</span></h3>
+        </div>
+        <div id="incoming-requests-list" class="requests-list">
+          <!-- Incoming requests will be populated here -->
+        </div>
+      </div>
+      
       <!-- Pending Requests -->
       <div class="requests-section">
         <div class="section-header">
