Popup to confirm when skills are saved

--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -748,6 +748,19 @@
   </div>
 </div>
 
+<!-- Notification Container -->
+<div id="notification-container" class="notification-container">
+    <div id="notification" class="notification">
+        <div class="notification-content">
+            <span class="notification-icon" id="notification-icon"></span>
+            <span class="notification-message" id="notification-message"></span>
+        </div>
+        <button class="notification-close" id="notification-close">
+            <span class="material-icons">close</span>
+        </button>
+    </div>
+</div>
+
 </body>
 </html>
 
