--- a/templates/facilitator_dashboard.html
+++ b/templates/facilitator_dashboard.html
@@ -373,7 +373,13 @@
       
       <div class="unavailability-summary-section">
         <div class="recent-unavailability-card">
-          <h3>Recent Unavailability</h3>
+          <div class="recent-unavailability-header">
+            <h3>Recent Unavailability</h3>
+            <button id="delete-all-unavailabilities-btn" class="delete-all-btn" title="Delete All Unavailabilities">
+              <span class="material-icons">delete_sweep</span>
+              Delete All
+            </button>
+          </div>
           <div id="recent-unavailability-list">
             <!-- Recent unavailability will be populated by JavaScript -->
           </div>
