--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -1755,8 +1755,8 @@ Tutorial A,Tuesday,09:00,1-12,120,EZONE 1.24
               <!-- Options -->
               <div class="mb-6">
                 <label class="flex items-center">
-                  <input type="checkbox" id="respect_overrides" checked class="mr-2">
-                  <span class="text-sm text-gray-700">Respect overrides</span>
+                  <input type="checkbox" id="respect_overrides" class="mr-2">
+                  <span class="text-sm text-gray-700">Skip sessions already set to these values (prevents redundant updates)</span>
                 </label>
               </div>
 
