--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -699,7 +699,7 @@
               <button type="button" class="nav-btn" id="prev-week">
                 <span class="material-icons">chevron_left</span>
               </button>
-              <span class="week-text">This Week</span>
+              <span class="week-text">Week</span>
               <button type="button" class="nav-btn" id="next-week">
                 <span class="material-icons">chevron_right</span>
               </button>
